_css/_thumbnails.scss
@import "variables";
$title-height: 42px;

.thumbnail{
  border:none 0px;
  overflow: hidden;
  margin-bottom:0;
}
.thumbnail-cell{
  padding:5px;
}

.thumbnail a{
  position:relative;
  display:block;
  border-radius:2px;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all 0.2s ease-in-out;
  padding-bottom: 56.25%;
}

.thumbnail a:hover{
  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
}

.thumbnail a:hover{
  color:$white;
  text-decoration:none;
}

.thumbnail > a > img{
  position: absolute;
  object-fit: cover;
  display:block;
  width: 100%;
  height:auto;
  border-top-right-radius: 2px;
  border-top-left-radius: 2px;
}

.thumbnail .caption {
  position:absolute;
  box-sizing: border-box;
  bottom:0;
  top:auto;
  left:0;
  right:0;
  height: $title-height;
  overflow:hidden;
  text-decoration:none;
  color:$white;
  background: $deep-blue;
  border-bottom-right-radius: 2px;
  border-bottom-left-radius: 2px;
  transition: all 0.2s ease-in;
}

.thumbnail .caption >.caption-title{
  color: $white;
  margin-top:0;
  display:flex;
  justify-content: space-between;
  line-height: $title-height;
  height: $title-height;
  padding: 0 8px;
  vertical-align: middle;
  text-overflow: ellipsis;
}

.thumbnail .caption >.caption-title >.caption-title-price{
  font-size: 14px;
  font-weight:normal;
}

.thumbnail:hover .caption{
  opacity:0.8;
  height:100%;
  margin-top:0px;
  border-radius:2px;
}

/*
.thumbnail:nth-of-type(3n+0) .caption{
  background: $blue;
}
.thumbnail:nth-of-type(3n+1) .caption{
  background: $grey-600;
}
*/

